force-app/main/default/objects/Opportunity/fields/Count_Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>Count_Opportunity_Products__c</fullName>
    <label>Count Opportunity Products</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Discount</field>
        <operation>greaterThan</operation>
        <value>5</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>