force-app/main/default/objects/Opportunity/fields/OppExternalId__c.field-meta.xml
<CustomField>
    <fullName>OppExternalId__c</fullName>
    <externalId>true</externalId>
    <label>OppExternalId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>