force-app/main/default/objects/Opportunity/recordTypes/Read_Only_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Read_Only_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Closed Own</businessProcess>
    <label>Read Only Record Type</label>
</RecordType>