force-app/main/default/objects/Opportunity/validationRules/Stage_Updation_for_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_Updation_for_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Amount  = 0, ISPICKVAL( StageName , &quot;Closed Won&quot;),NULL)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Can&apos;t move to closed won since amount is equal to 0.</errorMessage>
</ValidationRule>